<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/search_flickr"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/search_by_tag"/>

        <EditText
            android:id="@+id/timedate_tag_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:hint="@string/tag_hint"/>

        <Button
            android:id="@+id/timedate_search_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_gravity="end"
            android:text="@string/search"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:text="@string/search_by_date_upload"/>

        <CalendarView
            android:id="@+id/timedate_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"/>

        <TextClock
            android:id="@+id/timedate_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/timedate_search_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_gravity="end"
            android:text="@string/search"/>
    </LinearLayout>
</ScrollView>
</layout>